tests/harness/errors/testdata/154_lib.eu
` { export: :internal }
priv-helper(x): x + 1

pub-val: priv-helper(41)
